test-self-signed.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
