staging-echo_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - echo1.fyzix.net
    - echo2.fyzix.net
    secretName: echo-tls
  rules:
  - host: echo1.fyzix.net
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.fyzix.net
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
